--- a/hello-gatsby/src/styles/global.css
+++ b/hello-gatsby/src/styles/global.css
@@ -36,6 +36,10 @@
  }
  
  hr{
+     
+     border:0;
+     border-top: 1px solid rgba(0, 0, 0, 0.1);
+     height:0;
      margin:27px 0px;
  }
  
@@ -111,10 +115,12 @@
  #archives ul, #archives ul li{
      padding:0px;
      margin:0px 0px;
+     padding-right:1%;
  
   }
   #archives li{
-     display:inline-block;width:49%
+     display:inline-block;width:49%;
+     
  
   }
  
